--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -341,8 +341,8 @@ splash_comm_send() {
 
 # Returns the current splash mode.
 splash_get_mode() {
-	local ctty="$({spl_bindir}/fgconsole)"
-	local mode="$(${spl_util})"
+	local ctty="$(${spl_bindir}/fgconsole)"
+	local mode="$(${spl_util} -c getmode)"
 
 	if [ "${mode}" = "silent" ]; then
 		echo "silent"
